--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # 应用服务 WEB 访问端口
 server.port=8092
+#Apollo 配置
+app.id=101
 # Nacos帮助文档: https://nacos.io/zh-cn/docs/concepts.html
 spring.application.name=nacos-service
 # Nacos认证信息
@@ -16,3 +18,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/apolloChanger
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
