--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@
 server.port=8092
 #Apollo 配置
 app.id=101
+
+appkey.apollo.appId=101
+appkey.apollo.opUser=admin-ncf
+appkey.apollo.cluster=default
+appkey.apollo.namespace=application
+
 # Nacos帮助文档: https://nacos.io/zh-cn/docs/concepts.html
 spring.application.name=nacos-service
 # Nacos认证信息
