--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ appkey.apollo.opUser=admin-ncf
 appkey.apollo.cluster=default
 appkey.apollo.namespace=application
 
+#mybatis.type-handlers-package=com.example.handler
+
 # Nacos帮助文档: https://nacos.io/zh-cn/docs/concepts.html
 spring.application.name=nacos-service
 # Nacos认证信息
