--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,31 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #配置日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
+#no web
+#spring.main.web-environment=false
+
+#log config
+logging.config=classpath:logback.xml
+
+
+###xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
+xxl.job.admin.addresses=http://127.0.0.1:8090/xxl-job-admin
+
+###xxl-job, access token
+xxl.job.accessToken=
+
+###xxl-job executor appname
+xxl.job.executor.appname=demo-service-impl
+###xxl-job executor registry-address: default use address to registry , otherwise use ip:port if address is null
+xxl.job.executor.address=
+###xxl-job executor server-info
+xxl.job.executor.ip=
+xxl.job.executor.port=9999
+###xxl-job executor log-path
+xxl.job.executor.logpath=/users/zhaoyihang/soft/xxl-job-log/jobhandler
+###xxl-job executor log-retention-days
+xxl.job.executor.logretentiondays=30
+
+
 
 
