解决强依赖xxl-job

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,11 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #    org.apache.ibatis.logging.stdout.StdOutImpl
 
+management:
+  health:
+    xxljob:
+      enabled: false
+
 appkey:
   apollo:
     appId: 101
@@ -46,6 +51,7 @@ spring:
 #      ant_path_matcher
 xxl:
   job:
+    enabled: false  # 关闭 XXL-JOB 初始化
     admin:
       ### 调度中心部署根地址 [选填]：如调度中心集群部署存在多个地址则用逗号分隔。执行器将会使用该地址进行"执行器心跳注册"和"任务结果回调"；为空则关闭自动注册；
       addresses: ${xxl.job.admin.addresses}
