--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
             <version>2.5.0</version>
+            <optional>true</optional>
         </dependency>
 
         <!--mysql-->
